version/0.16/_sources/api/ansys/dpf/core/index.rst.txt






The ``ansys.dpf.core`` library
==============================

.. py:module:: ansys.dpf.core


Summary
-------








.. py:currentmodule:: core
.. tab-set::

    .. tab-item:: Subpackages

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.dpf.core.documentation`
            - Documentation generation tools.


          * - :py:obj:`~ansys.dpf.core.examples`
            - Provide utility functions for downloading and locating DPF example files.


          * - :py:obj:`~ansys.dpf.core.helpers`
            - Provide helpers relating to streamline computation, argument filtering, and text indenting.


          * - :py:obj:`~ansys.dpf.core.operators`
            - 


          * - :py:obj:`~ansys.dpf.core.workflow_topology`
            - Workflow topology module.



    .. tab-item:: Submodules

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.dpf.core.animation`
            - Module contains the function for modal animation creation.


          * - :py:obj:`~ansys.dpf.core.animator`
            - Animator.


          * - :py:obj:`~ansys.dpf.core.any`
            - Any.


          * - :py:obj:`~ansys.dpf.core.available_result`
            - AvailableResult.


          * - :py:obj:`~ansys.dpf.core.changelog`
            - Provides classes for changelogs.


          * - :py:obj:`~ansys.dpf.core.collection`
            - Module containing the class representing dpf objects organized by label spaces.


          * - :py:obj:`~ansys.dpf.core.collection_base`
            - Contains classes associated with the DPF collection.


          * - :py:obj:`~ansys.dpf.core.common`
            - Common.


          * - :py:obj:`~ansys.dpf.core.config`
            - Operator Configuration.


          * - :py:obj:`~ansys.dpf.core.core`
            - Core.


          * - :py:obj:`~ansys.dpf.core.custom_container_base`
            - CustomContainerBase.


          * - :py:obj:`~ansys.dpf.core.custom_fields_container`
            - Custom Fields Containers.


          * - :py:obj:`~ansys.dpf.core.custom_operator`
            - Custom Operator Base.


          * - :py:obj:`~ansys.dpf.core.custom_type_field`
            - CustomTypeField.


          * - :py:obj:`~ansys.dpf.core.cyclic_support`
            - Cyclic Support.


          * - :py:obj:`~ansys.dpf.core.data_sources`
            - Data sources.


          * - :py:obj:`~ansys.dpf.core.data_tree`
            - DataTree.


          * - :py:obj:`~ansys.dpf.core.dimensionality`
            - Dimensionality.


          * - :py:obj:`~ansys.dpf.core.dpf_array`
            - DPFArray.


          * - :py:obj:`~ansys.dpf.core.dpf_operator`
            - Operator.


          * - :py:obj:`~ansys.dpf.core.element_descriptor`
            - Element Descriptor.


          * - :py:obj:`~ansys.dpf.core.elements`
            - Elements.


          * - :py:obj:`~ansys.dpf.core.errors`
            - Errors.


          * - :py:obj:`~ansys.dpf.core.faces`
            - Faces.


          * - :py:obj:`~ansys.dpf.core.field`
            - Field.


          * - :py:obj:`~ansys.dpf.core.field_definition`
            - FieldDefinition.


          * - :py:obj:`~ansys.dpf.core.fields_container`
            - FieldsContainer.


          * - :py:obj:`~ansys.dpf.core.fields_container_factory`
            - fields_container_factory.


          * - :py:obj:`~ansys.dpf.core.fields_factory`
            - fields_factory.


          * - :py:obj:`~ansys.dpf.core.generic_data_container`
            - GenericDataContainer.


          * - :py:obj:`~ansys.dpf.core.generic_support`
            - GenericSupport.


          * - :py:obj:`~ansys.dpf.core.geometry`
            - Geometry.


          * - :py:obj:`~ansys.dpf.core.geometry_factory`
            - Geometry Factory.


          * - :py:obj:`~ansys.dpf.core.incremental`
            - Incremental.


          * - :py:obj:`~ansys.dpf.core.inputs`
            - Inputs.


          * - :py:obj:`~ansys.dpf.core.mesh_info`
            - MeshInfo.


          * - :py:obj:`~ansys.dpf.core.mesh_scoping_factory`
            - mesh_scoping_factory.


          * - :py:obj:`~ansys.dpf.core.meshed_region`
            - MeshedRegion.


          * - :py:obj:`~ansys.dpf.core.meshes_container`
            - MeshesContainer.


          * - :py:obj:`~ansys.dpf.core.model`
            - Model.


          * - :py:obj:`~ansys.dpf.core.nodes`
            - Nodes.


          * - :py:obj:`~ansys.dpf.core.operator_specification`
            - Operator Specification.


          * - :py:obj:`~ansys.dpf.core.outputs`
            - Outputs.


          * - :py:obj:`~ansys.dpf.core.path_utilities`
            - path_utilities.


          * - :py:obj:`~ansys.dpf.core.plotter`
            - Plotter.


          * - :py:obj:`~ansys.dpf.core.plugins`
            - Python DPF plugins utilities.


          * - :py:obj:`~ansys.dpf.core.property_field`
            - PropertyField.


          * - :py:obj:`~ansys.dpf.core.property_fields_container`
            - PropertyFieldsContainer.


          * - :py:obj:`~ansys.dpf.core.result_info`
            - ResultInfo.


          * - :py:obj:`~ansys.dpf.core.results`
            - Results.


          * - :py:obj:`~ansys.dpf.core.runtime_config`
            - RuntimeConfig.


          * - :py:obj:`~ansys.dpf.core.scoping`
            - Scoping.


          * - :py:obj:`~ansys.dpf.core.scopings_container`
            - ScopingsContainer.


          * - :py:obj:`~ansys.dpf.core.server`
            - Server.


          * - :py:obj:`~ansys.dpf.core.server_context`
            - ServerContext.


          * - :py:obj:`~ansys.dpf.core.server_factory`
            - Server factory, server configuration and communication protocols.


          * - :py:obj:`~ansys.dpf.core.server_types`
            - Server types.


          * - :py:obj:`~ansys.dpf.core.session`
            - Session.


          * - :py:obj:`~ansys.dpf.core.settings`
            - settings.


          * - :py:obj:`~ansys.dpf.core.stream`
            - Stream.


          * - :py:obj:`~ansys.dpf.core.streams_container`
            - StreamsContainer.


          * - :py:obj:`~ansys.dpf.core.string_field`
            - StringField.


          * - :py:obj:`~ansys.dpf.core.support`
            - Support.


          * - :py:obj:`~ansys.dpf.core.time_freq_scoping_factory`
            - time_freq_scoping_factory.


          * - :py:obj:`~ansys.dpf.core.time_freq_support`
            - TimeFreqSupport.


          * - :py:obj:`~ansys.dpf.core.unit_system`
            - UnitSystem.


          * - :py:obj:`~ansys.dpf.core.vtk_helper`
            - Helpers for interactions between DPF and VTK.


          * - :py:obj:`~ansys.dpf.core.workflow`
            - Workflow.








    .. tab-item:: Attributes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~__version__`
            - 


          * - :py:obj:`~spec`
            - 


          * - :py:obj:`~installed`
            - 


          * - :py:obj:`~check_for`
            - 


          * - :py:obj:`~CustomTypeFieldsCollection`
            - 


          * - :py:obj:`~GenericDataContainersCollection`
            - 


          * - :py:obj:`~StringFieldsCollection`
            - 


          * - :py:obj:`~OperatorsCollection`
            - 


          * - :py:obj:`~AnyCollection`
            - 



    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~USER_DATA_PATH`
            - 


          * - :py:obj:`~LOCAL_DOWNLOADED_EXAMPLES_PATH`
            - 


          * - :py:obj:`~SERVER`
            - 


          * - :py:obj:`~SERVER_CONFIGURATION`
            - 




.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-md-package"></span> documentation</api/ansys/dpf/core/documentation/index>
    <span class="nf nf-md-package"></span> examples</api/ansys/dpf/core/examples/index>
    <span class="nf nf-md-package"></span> helpers</api/ansys/dpf/core/helpers/index>
    <span class="nf nf-md-package"></span> operators</api/ansys/dpf/core/operators/index>
    <span class="nf nf-md-package"></span> workflow_topology</api/ansys/dpf/core/workflow_topology/index>


.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-fa-file"></span> animation</api/ansys/dpf/core/animation/index>
    <span class="nf nf-fa-file"></span> animator</api/ansys/dpf/core/animator/index>
    <span class="nf nf-fa-file"></span> any</api/ansys/dpf/core/any/index>
    <span class="nf nf-fa-file"></span> available_result</api/ansys/dpf/core/available_result/index>
    <span class="nf nf-fa-file"></span> changelog</api/ansys/dpf/core/changelog/index>
    <span class="nf nf-fa-file"></span> collection</api/ansys/dpf/core/collection/index>
    <span class="nf nf-fa-file"></span> collection_base</api/ansys/dpf/core/collection_base/index>
    <span class="nf nf-fa-file"></span> common</api/ansys/dpf/core/common/index>
    <span class="nf nf-fa-file"></span> config</api/ansys/dpf/core/config/index>
    <span class="nf nf-fa-file"></span> core</api/ansys/dpf/core/core/index>
    <span class="nf nf-fa-file"></span> custom_container_base</api/ansys/dpf/core/custom_container_base/index>
    <span class="nf nf-fa-file"></span> custom_fields_container</api/ansys/dpf/core/custom_fields_container/index>
    <span class="nf nf-fa-file"></span> custom_operator</api/ansys/dpf/core/custom_operator/index>
    <span class="nf nf-fa-file"></span> custom_type_field</api/ansys/dpf/core/custom_type_field/index>
    <span class="nf nf-fa-file"></span> cyclic_support</api/ansys/dpf/core/cyclic_support/index>
    <span class="nf nf-fa-file"></span> data_sources</api/ansys/dpf/core/data_sources/index>
    <span class="nf nf-fa-file"></span> data_tree</api/ansys/dpf/core/data_tree/index>
    <span class="nf nf-fa-file"></span> dimensionality</api/ansys/dpf/core/dimensionality/index>
    <span class="nf nf-fa-file"></span> dpf_array</api/ansys/dpf/core/dpf_array/index>
    <span class="nf nf-fa-file"></span> dpf_operator</api/ansys/dpf/core/dpf_operator/index>
    <span class="nf nf-fa-file"></span> element_descriptor</api/ansys/dpf/core/element_descriptor/index>
    <span class="nf nf-fa-file"></span> elements</api/ansys/dpf/core/elements/index>
    <span class="nf nf-fa-file"></span> errors</api/ansys/dpf/core/errors/index>
    <span class="nf nf-fa-file"></span> faces</api/ansys/dpf/core/faces/index>
    <span class="nf nf-fa-file"></span> field</api/ansys/dpf/core/field/index>
    <span class="nf nf-fa-file"></span> field_definition</api/ansys/dpf/core/field_definition/index>
    <span class="nf nf-fa-file"></span> fields_container</api/ansys/dpf/core/fields_container/index>
    <span class="nf nf-fa-file"></span> fields_container_factory</api/ansys/dpf/core/fields_container_factory/index>
    <span class="nf nf-fa-file"></span> fields_factory</api/ansys/dpf/core/fields_factory/index>
    <span class="nf nf-fa-file"></span> generic_data_container</api/ansys/dpf/core/generic_data_container/index>
    <span class="nf nf-fa-file"></span> generic_support</api/ansys/dpf/core/generic_support/index>
    <span class="nf nf-fa-file"></span> geometry</api/ansys/dpf/core/geometry/index>
    <span class="nf nf-fa-file"></span> geometry_factory</api/ansys/dpf/core/geometry_factory/index>
    <span class="nf nf-fa-file"></span> incremental</api/ansys/dpf/core/incremental/index>
    <span class="nf nf-fa-file"></span> inputs</api/ansys/dpf/core/inputs/index>
    <span class="nf nf-fa-file"></span> mesh_info</api/ansys/dpf/core/mesh_info/index>
    <span class="nf nf-fa-file"></span> mesh_scoping_factory</api/ansys/dpf/core/mesh_scoping_factory/index>
    <span class="nf nf-fa-file"></span> meshed_region</api/ansys/dpf/core/meshed_region/index>
    <span class="nf nf-fa-file"></span> meshes_container</api/ansys/dpf/core/meshes_container/index>
    <span class="nf nf-fa-file"></span> model</api/ansys/dpf/core/model/index>
    <span class="nf nf-fa-file"></span> nodes</api/ansys/dpf/core/nodes/index>
    <span class="nf nf-fa-file"></span> operator_specification</api/ansys/dpf/core/operator_specification/index>
    <span class="nf nf-fa-file"></span> outputs</api/ansys/dpf/core/outputs/index>
    <span class="nf nf-fa-file"></span> path_utilities</api/ansys/dpf/core/path_utilities/index>
    <span class="nf nf-fa-file"></span> plotter</api/ansys/dpf/core/plotter/index>
    <span class="nf nf-fa-file"></span> plugins</api/ansys/dpf/core/plugins/index>
    <span class="nf nf-fa-file"></span> property_field</api/ansys/dpf/core/property_field/index>
    <span class="nf nf-fa-file"></span> property_fields_container</api/ansys/dpf/core/property_fields_container/index>
    <span class="nf nf-fa-file"></span> result_info</api/ansys/dpf/core/result_info/index>
    <span class="nf nf-fa-file"></span> results</api/ansys/dpf/core/results/index>
    <span class="nf nf-fa-file"></span> runtime_config</api/ansys/dpf/core/runtime_config/index>
    <span class="nf nf-fa-file"></span> scoping</api/ansys/dpf/core/scoping/index>
    <span class="nf nf-fa-file"></span> scopings_container</api/ansys/dpf/core/scopings_container/index>
    <span class="nf nf-fa-file"></span> server</api/ansys/dpf/core/server/index>
    <span class="nf nf-fa-file"></span> server_context</api/ansys/dpf/core/server_context/index>
    <span class="nf nf-fa-file"></span> server_factory</api/ansys/dpf/core/server_factory/index>
    <span class="nf nf-fa-file"></span> server_types</api/ansys/dpf/core/server_types/index>
    <span class="nf nf-fa-file"></span> session</api/ansys/dpf/core/session/index>
    <span class="nf nf-fa-file"></span> settings</api/ansys/dpf/core/settings/index>
    <span class="nf nf-fa-file"></span> stream</api/ansys/dpf/core/stream/index>
    <span class="nf nf-fa-file"></span> streams_container</api/ansys/dpf/core/streams_container/index>
    <span class="nf nf-fa-file"></span> string_field</api/ansys/dpf/core/string_field/index>
    <span class="nf nf-fa-file"></span> support</api/ansys/dpf/core/support/index>
    <span class="nf nf-fa-file"></span> time_freq_scoping_factory</api/ansys/dpf/core/time_freq_scoping_factory/index>
    <span class="nf nf-fa-file"></span> time_freq_support</api/ansys/dpf/core/time_freq_support/index>
    <span class="nf nf-fa-file"></span> unit_system</api/ansys/dpf/core/unit_system/index>
    <span class="nf nf-fa-file"></span> vtk_helper</api/ansys/dpf/core/vtk_helper/index>
    <span class="nf nf-fa-file"></span> workflow</api/ansys/dpf/core/workflow/index>

















Module detail
-------------

.. py:data:: USER_DATA_PATH
   :value: None


.. py:data:: LOCAL_DOWNLOADED_EXAMPLES_PATH
   :value: None


.. py:data:: SERVER
   :value: None


.. py:data:: SERVER_CONFIGURATION
   :value: None


.. py:data:: __version__

.. py:data:: spec

.. py:data:: installed

.. py:data:: check_for
   :value: ['ansys-dpf-gatebin', 'ansys-dpf-gate', 'ansys-grpc-dpf']


.. py:data:: CustomTypeFieldsCollection

.. py:data:: GenericDataContainersCollection

.. py:data:: StringFieldsCollection

.. py:data:: OperatorsCollection

.. py:data:: AnyCollection



